# RenderSandbox

./: .gitignore  CMakeLists.txt  vcpkg.json
assets/shaders/: basic.frag  basic.vert  cubemap.vert  equirect_to_cubemap.frag  irradiance_convolution.frag  pbr.frag  post.frag  post.vert  skybox.frag  skybox.vert
src/: IBLBaker.cpp  IBLBaker.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureHDR.cpp  TextureHDR.h  Transform.cpp  Transform.h  main.cpp
src/render/: Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  PostProcessPass.cpp  PostProcessPass.h  Renderer.cpp  Renderer.h
